<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Login"
    android:background="@color/lightWhite"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_marginLeft="95dp"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_screen_icon"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="95dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.hbb20.CountryCodePicker
                android:id="@+id/login_country_code_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                app:ccp_showFullName="true"
                android:padding="10dp"
                android:background="@drawable/black_border"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_no"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_no"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:counterMaxLength="10"
                app:startIconDrawable="@drawable/phone_no_icon"
                app:startIconTint="@color/black">




                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_extralight"
                    android:textColor="@color/black"
                    android:inputType="phone"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                android:textColorHint="@color/black_overlay"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/pw_icon_ios"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_extralight"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_forget_password"
                    android:onClick="callMakeSelectionScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    app:backgroundTint="#00000000"/>


            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:onClick="letTheUserLoggedIn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login"
                android:gravity="center"
                style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
                app:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_create_acc_btn"
                android:onClick="callCreateAccountScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_marginTop="20dp"
                app:backgroundTint="#00000000"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:gravity="center_horizontal" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>